--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   </div>
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- <script src="game.js" charset="utf-8"></script>
+ <script src="main.js" charset="utf-8"></script>
 </body>
 </html>
